force-app/main/default/objects/Application__c/fields/CPAPALicenseNumberandAuthority__c.field-meta.xml
<CustomField>
    <fullName>CPAPALicenseNumberandAuthority__c</fullName>
    <description>CPA/PA License Number &amp; Issuing Authority</description>
    <inlineHelpText>CPA/PA Title input on the MYPVL Portal during Renewals/Restoration</inlineHelpText>
    <label>CPA/PA License Number and Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>