force-app/main/default/objects/Application__c/fields/CPAPAName__c.field-meta.xml
<CustomField>
    <fullName>CPAPAName__c</fullName>
    <inlineHelpText>Name of CPA/PA input on the MYPVL Portal during Renewals/Restoration.</inlineHelpText>
    <label>CPA/PA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>