force-app/main/default/objects/Application__c/fields/CPAPATitle__c.field-meta.xml
<CustomField>
    <fullName>CPAPATitle__c</fullName>
    <inlineHelpText>CPA/PA Title input on the MYPVL Portal during Renewals/Restoration.</inlineHelpText>
    <label>CPA/PA Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>