force-app/main/default/objects/Application__c/fields/CPAPeerReviewPerformed__c.field-meta.xml
<CustomField>
    <fullName>CPAPeerReviewPerformed__c</fullName>
    <inlineHelpText>Was the CPA firm required to have a peer review performed between 1/1/2019 and 12/31/2021 under HRS sections 466-31 through 466-43?</inlineHelpText>
    <label>CPA Peer Review Performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>