force-app/main/default/objects/Application__c/fields/CreditReportReceived__c.field-meta.xml
<CustomField>
    <fullName>CreditReportReceived__c</fullName>
    <label>Credit Report Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No PR</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>For Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>