force-app/main/default/objects/Application__c/fields/CSDTEmploymentCurrent__c.field-meta.xml
<CustomField>
    <fullName>CSDTEmploymentCurrent__c</fullName>
    <label>CSDT Employment Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>