force-app/main/default/objects/Application__c/fields/CSDTFailedLicensingExam__c.field-meta.xml
<CustomField>
    <fullName>CSDTFailedLicensingExam__c</fullName>
    <label>CSDT Failed Licensing Exam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>