force-app/main/default/objects/Application__c/fields/CurrentLicense__c.field-meta.xml
<CustomField>
    <fullName>CurrentLicense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC071519- Created for PVL phase 1</description>
    <inlineHelpText>When a License is generated for this Application, the License Number will show up here.</inlineHelpText>
    <label>Current License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Applications (Current License)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>