force-app/main/default/objects/Application__c/fields/CurrentLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>CurrentLicenseNumber__c</fullName>
    <description>PacPoint-DN03022021</description>
    <formula>CurrentLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current License Number</label>
    <type>Text</type>
</CustomField>