force-app/main/default/objects/Application__c/fields/CurrentLicenseOrigDateofLicensure__c.field-meta.xml
<CustomField>
    <fullName>CurrentLicenseOrigDateofLicensure__c</fullName>
    <formula>CurrentLicense__r.OriginalDateofLicensure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current License Orig. Date of Licensure</label>
    <type>Date</type>
</CustomField>