force-app/main/default/objects/Application__c/fields/CurrentLicenseStartofRenewalPeriod__c.field-meta.xml
<CustomField>
    <fullName>CurrentLicenseStartofRenewalPeriod__c</fullName>
    <description>PacPoint-IC103019- Created for PVL phase 1
Retrieves and formats the Current License&apos;s License Type Start of Renewal field to Month/Year</description>
    <formula>TEXT(MONTH( CurrentLicense__r.LicenseType__r.StartofRenewalPeriod__c ))  &amp; &quot;/&quot; &amp;   TEXT(YEAR( CurrentLicense__r.LicenseType__r.StartofRenewalPeriod__c ))</formula>
    <label>Current License Start of Renewal Period</label>
    <type>Text</type>
</CustomField>