force-app/main/default/objects/Application__c/fields/CurrentLicenseYear__c.field-meta.xml
<CustomField>
    <fullName>CurrentLicenseYear__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <formula>IF(
   AND(
      LicenseType__r.DurationofLicenseInMonths__c = 36, 
      ISPICKVAL(LicensePeriod__c, &apos;Next License Period&apos;)),
         &quot;Triennial 1st Year&quot;,

IF(
   AND(
      LicenseType__r.DurationofLicenseInMonths__c = 24, 
      ISPICKVAL(LicensePeriod__c, &apos;Next License Period&apos;)),
         &quot;Biennial 1st Year&quot;,


IF(
   AND(
      LicenseType__r.DurationofLicenseInMonths__c = 12, 
      ISPICKVAL(LicensePeriod__c, &apos;Next License Period&apos;)),
         &quot;Annual 1st Year&quot;,

            LicenseType__r.CurrentLicenseYear__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the current license year we are in, if this Application is Approved today.</inlineHelpText>
    <label>Current License Year</label>
    <type>Text</type>
</CustomField>