force-app/main/default/objects/Application__c/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>