force-app/main/default/objects/Application__c/fields/DateofDegree2__c.field-meta.xml
<CustomField>
    <fullName>DateofDegree2__c</fullName>
    <description>PacPoint-DN-03122021</description>
    <label>Date of Degree</label>
    <length>7</length>
    <type>Text</type>
</CustomField>