force-app/main/default/objects/Application__c/fields/DateofDegree__c.field-meta.xml
<CustomField>
    <fullName>DateofDegree__c</fullName>
    <description>PacPoint-KN102319-Created for PVL Sprint 2 Phase 1</description>
    <label>Date of Degree</label>
    <type>Date</type>
</CustomField>