force-app/main/default/objects/Application__c/fields/DateofLicensure__c.field-meta.xml
<CustomField>
    <fullName>DateofLicensure__c</fullName>
    <description>PacPoint-MV110519 - Created for PVL phase 1</description>
    <inlineHelpText>The date when the license was generated.</inlineHelpText>
    <label>Date of Licensure</label>
    <type>Date</type>
</CustomField>