force-app/main/default/objects/Application__c/fields/DatePassed__c.field-meta.xml
<CustomField>
    <fullName>DatePassed__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Date Passed</label>
    <type>Date</type>
</CustomField>