force-app/main/default/objects/Application__c/fields/DaysbeforeEnteredintoSalesforc__c.field-meta.xml
<CustomField>
    <fullName>DaysbeforeEnteredintoSalesforc__c</fullName>
    <formula>NULLVALUE(NULLVALUE( PhaseAStartDate__c , NOW()) -  DATETIMEVALUE(ApplicationReceivedDate__c)  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Before Entered into Salesforce</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>