force-app/main/default/objects/Application__c/fields/DayssinceNoticeofFeesDueSent__c.field-meta.xml
<CustomField>
    <fullName>DayssinceNoticeofFeesDueSent__c</fullName>
    <description>PacPoint-FT100719 - Created for PVL phase 1</description>
    <formula>TODAY() -  NoticeofFeesSentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the number of days that have passed since the Notice of Fees due was sent.</inlineHelpText>
    <label>Days since Notice of Fees Due Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>