force-app/main/default/objects/Application__c/fields/DaysSpentonInitialDeficiencies__c.field-meta.xml
<CustomField>
    <fullName>DaysSpentonInitialDeficiencies__c</fullName>
    <formula>NULLVALUE(NULLVALUE( PhaseAEndDate__c , NOW()) - DATETIMEVALUE(InitialReviewDate__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Spent on Initial Deficiencies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>