force-app/main/default/objects/Application__c/fields/DaysSpentonInitialReview__c.field-meta.xml
<CustomField>
    <fullName>DaysSpentonInitialReview__c</fullName>
    <formula>IF(
CreatedById &lt;&gt; &quot;005t0000002agJS&quot;, 
DATETIMEVALUE(InitialReviewDate__c)  -   PhaseAStartDate__c, 
DATETIMEVALUE(InitialReviewDate__c)  - DATETIMEVALUE(ApplicationReceivedDate__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Spent on Initial Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>