force-app/main/default/objects/Application__c/fields/DeficiencyDueDate__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyDueDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1
PacPoint-KN082319-Modified for PVL Phase 1</description>
    <inlineHelpText>The date that the deficiencies are due</inlineHelpText>
    <label>Deficiency Due Date</label>
    <type>Date</type>
</CustomField>