force-app/main/default/objects/Application__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>BSN</fullName>
            </value>
            <value>
                <fullName>CRT/PN</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>GEPN</fullName>
            </value>
            <value>
                <fullName>MEPN</fullName>
            </value>
            <value>
                <fullName>MSN</fullName>
            </value>
            <value>
                <fullName>NDN</fullName>
            </value>
            <value>
                <fullName>Post-Master’s Certificate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>