force-app/main/default/objects/Application__c/fields/DeniedaLicenseorWithdrawnanApp__c.field-meta.xml
<CustomField>
    <fullName>DeniedaLicenseorWithdrawnanApp__c</fullName>
    <description>Used for Medical Renewal Questions for License Types MD, AMD, PO</description>
    <inlineHelpText>In the past two years, with regard to any medical or osteopathic medical license to practice in any state or country:
c) Have you ever been denied a license or withdrawn an application for licensure?</inlineHelpText>
    <label>Denied a License or Withdrawn an App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>