force-app/main/default/objects/Application__c/fields/DependencyMessage__c.field-meta.xml
<CustomField>
    <fullName>DependencyMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to display rich text on lightning page. This function is used during Restoration when an application does not have a dependency met.</description>
    <label>Dependency Message</label>
    <type>Checkbox</type>
</CustomField>