force-app/main/default/objects/Application__c/fields/DependencyRequired__c.field-meta.xml
<CustomField>
    <fullName>DependencyRequired__c</fullName>
    <description>PacPoint-CZ100319 - Created for PVL phase 1</description>
    <formula>LicenseType__r.DependencyRequired__c</formula>
    <label>Dependency Required</label>
    <type>Checkbox</type>
</CustomField>