force-app/main/default/objects/Application__c/fields/DependentApplicant__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicant__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>IF(
  DependentApplication__r.Applicant__r.RecordType.DeveloperName = &apos;BusinessAccount&apos;,
 DependentApplication__r.Applicant__r.Name , 
DependentApplication__r.Applicant__r.FirstName &amp; &quot; &quot;&amp;DependentApplication__r.Applicant__r.MiddleName &amp;&quot; &quot;&amp;DependentApplication__r.Applicant__r.LastName &amp;&quot; &quot;&amp;DependentApplication__r.Applicant__r.Suffix 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Applicant</label>
    <type>Text</type>
</CustomField>