force-app/main/default/objects/Application__c/fields/DependentApplicantBPID__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicantBPID__c</fullName>
    <formula>&quot;XXXXX&quot; &amp; RIGHT( DependentApplication__r.PVLBPID__c , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Applicant BP ID</label>
    <type>Text</type>
</CustomField>