force-app/main/default/objects/Application__c/fields/DependentApplicantLicensee__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicantLicensee__c</fullName>
    <description>PacPoint-MV121019 - Created for PVL phase 1.  To be used on the Doc Generator Templates</description>
    <formula>IF(
 NOT(ISBLANK( DependentApplication__c )), 
 DependentApplicant__c, 
 DependentLicensee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Applicant/Licensee</label>
    <type>Text</type>
</CustomField>