force-app/main/default/objects/Application__c/fields/DependentApplication__c.field-meta.xml
<CustomField>
    <fullName>DependentApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Dependent Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Dependent Applications</relationshipLabel>
    <relationshipName>Dependent_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>