force-app/main/default/objects/Application__c/fields/DependentApplicationAppType__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicationAppType__c</fullName>
    <formula>TEXT(DependentApplication__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Application Type App</label>
    <type>Text</type>
</CustomField>