force-app/main/default/objects/Application__c/fields/DependentApplicationhasLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicationhasLicense__c</fullName>
    <description>PacPoint-MV100619 - Created for PVL phase 1 to be used in PB to create associated license as a workaround of the PB limitation to use cross-object reference fields on the criteria</description>
    <formula>IF(
  AND(
  NOT(ISBLANK(DependentApplication__c)),
  NOT(ISBLANK(DependentApplication__r.CurrentLicense__c))
  ), 
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Application has License</label>
    <type>Checkbox</type>
</CustomField>