force-app/main/default/objects/Application__c/fields/DependentApplicationLicenseLT__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicationLicenseLT__c</fullName>
    <formula>IF(
NOT(ISBLANK( DependentApplication__c )),
 DependentApplication__r.LicenseType__r.Name ,
 DependentLicense__r.LicenseType__r.Name 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Application/License LT</label>
    <type>Text</type>
</CustomField>