force-app/main/default/objects/Application__c/fields/DependentApplicationsCurrentLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicationsCurrentLicense__c</fullName>
    <description>PacPoint-IC112619- Created for PVL phase 1
This retrieves the Dependent Application&apos;s Current License to be used on the Flow ApplicationClassifications:Update Dependent App/License.</description>
    <formula>IF( 
ISBLANK(  DependentApplication__c  ) , 
&quot;&quot;, 
CASESAFEID( DependentApplication__r.CurrentLicense__c )
)</formula>
    <label>Dependent Application&apos;s Current License</label>
    <type>Text</type>
</CustomField>