force-app/main/default/objects/Application__c/fields/DependentApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicationStatus__c</fullName>
    <description>PacPoint-FT100719 - Created for PVL phase 1</description>
    <formula>TEXT(DependentApplication__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Application Status</label>
    <type>Text</type>
</CustomField>