force-app/main/default/objects/Application__c/fields/DependentApplicationType__c.field-meta.xml
<CustomField>
    <fullName>DependentApplicationType__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>DependentApplication__r.LicenseType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Application Type</label>
    <type>Text</type>
</CustomField>