force-app/main/default/objects/Application__c/fields/DependentBusinessCountry__c.field-meta.xml
<CustomField>
    <fullName>DependentBusinessCountry__c</fullName>
    <description>PacPoint-DN102819-Created for PVL Sprint 2 Phase 1</description>
    <formula>IF(
NOT( ISBLANK( DependentApplication__c )),

   TEXT(DependentApplication__r.BusinessCountry__c)    ,

IF(
NOT( ISBLANK( DependentLicense__c )),

  TEXT(DependentLicense__r.BusinessCountry__c)  ,

&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Business Country</label>
    <type>Text</type>
</CustomField>