force-app/main/default/objects/Application__c/fields/DependentBusinessStreet__c.field-meta.xml
<CustomField>
    <fullName>DependentBusinessStreet__c</fullName>
    <description>PacPoint-DN102819-Created for PVL Sprint 2 Phase 1</description>
    <formula>IF(
NOT( ISBLANK( DependentApplication__c )),

DependentApplication__r.BusinessStreet__c ,

IF(
NOT( ISBLANK( DependentLicense__c )),

 DependentLicense__r.BusinessStreet__c  ,

&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Business Street</label>
    <type>Text</type>
</CustomField>