force-app/main/default/objects/Application__c/fields/DependentBusinessZipCode__c.field-meta.xml
<CustomField>
    <fullName>DependentBusinessZipCode__c</fullName>
    <description>PacPoint-DN102819-Created for PVL Sprint 2 Phase 1</description>
    <formula>IF(
NOT( ISBLANK( DependentApplication__c )),

  DependentApplication__r.BusinessZipCode__c ,

IF(
NOT( ISBLANK( DependentLicense__c )),

  DependentLicense__r.BusinessZipCode__c   ,

&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Business Zip Code</label>
    <type>Text</type>
</CustomField>