force-app/main/default/objects/Application__c/fields/DependentEmployerStreet__c.field-meta.xml
<CustomField>
    <fullName>DependentEmployerStreet__c</fullName>
    <description>PacPoint-DN102819-Created for PVL Sprint 2 Phase 1</description>
    <formula>IF(
NOT( ISBLANK( DependentApplication__c )),

   DependentApplication__r.EmployerStreet__c    ,

IF(
NOT( ISBLANK( DependentLicense__c )),

  DependentLicense__r.EmployerStreet__c   ,

&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Employer Street</label>
    <type>Text</type>
</CustomField>