force-app/main/default/objects/Application__c/fields/DependentLicense2__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pac Point-DN011520 - Created for PVL Sprint 3 Phase 1</description>
    <inlineHelpText>For license types with 2 dependencies, the second license will be linked here.</inlineHelpText>
    <label>Dependent License 2</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Applications (Dependent License 2)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>