force-app/main/default/objects/Application__c/fields/DependentLicense2Type__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2Type__c</fullName>
    <description>PacPoint-DN02052020 - Created for PVL Sprint 3 Phase 1</description>
    <formula>DependentLicense2__r.LicenseType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 2 Type</label>
    <type>Text</type>
</CustomField>