force-app/main/default/objects/Application__c/fields/DependentLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>The dependent license is the principal or entity for this application.</inlineHelpText>
    <label>Dependent License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>