force-app/main/default/objects/Application__c/fields/DependentLicenseAppEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseAppEffectiveDate__c</fullName>
    <formula>IF(
NOT(ISBLANK(DependentApplication__c)),
DependentApplication__r.ApplicationReceivedDate__c,
IF(
NOT(ISBLANK(DependentLicense__c)),
DependentLicense__r.OriginalDateofLicensure__c,
null
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License/App Effective Date</label>
    <type>Date</type>
</CustomField>