force-app/main/default/objects/Application__c/fields/DependentLicenseAppExpireDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseAppExpireDate__c</fullName>
    <description>PacPoint-MV121119 - Created for PVL phase 1. used in the Doc Generator Settings.</description>
    <formula>IF(
 NOT(ISBLANK(DependentApplication__c)),
 DependentApplication__r.CompleteApplicationBy__c ,
 IF(
  NOT(ISBLANK(DependentLicense__c)),
  DependentLicense__r.EffectiveExpireDate__c,
  null
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License/App Expire Date</label>
    <type>Date</type>
</CustomField>