force-app/main/default/objects/Application__c/fields/DependentLicenseAppStatusPrefix__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseAppStatusPrefix__c</fullName>
    <description>PacPoint-MV121119 - Created for PVL phase 1. To be used in the Doc Generator Settings.</description>
    <formula>IF(
  NOT(ISBLANK(DependentApplication__c)), 
  DependentApplication__r.StatusCodeTemplate__c,
  IF(
  NOT(ISBLANK(DependentLicense__c)), 
  LEFT(TEXT(DependentLicense__r.Status__c), FIND(&quot; &quot;, TEXT(DependentLicense__r.Status__c)) - 1),
  &quot;&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License/App Status Prefix</label>
    <type>Text</type>
</CustomField>