force-app/main/default/objects/Application__c/fields/DependentLicenseClassPrefix__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseClassPrefix__c</fullName>
    <description>PacPoint-MV121019 - Created for PVL phase 1.Used on the Doc Generator Settings.</description>
    <formula>IF(
 NOT(ISBLANK( DependentLicense__c )),
 DependentLicense__r.ClassPrefix__c,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Class Prefix</label>
    <type>Text</type>
</CustomField>