force-app/main/default/objects/Application__c/fields/DependentLicenseConditionalLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseConditionalLicense__c</fullName>
    <description>PacPoint-MV121119 - Created for PVL phase 1. Used in the Doc generator Settings</description>
    <formula>IF(
DependentLicense__r.ConditionalLicense__c = true ,
&quot;YES&quot;,
&quot;NONE&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Conditional License</label>
    <type>Text</type>
</CustomField>