force-app/main/default/objects/Application__c/fields/DependentLicensee2__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensee2__c</fullName>
    <description>PacPoint-DN02042020 - Created for PVL Sprint 3 Phase 1</description>
    <formula>IF(
DependentLicense2__r.Licensee__r.RecordType.DeveloperName = &apos;BusinessAccount&apos;,
DependentLicense2__r.Licensee__r.Name,
DependentLicense2__r.Licensee__r.FirstName &amp; &quot; &quot;&amp;DependentLicense2__r.Licensee__r.MiddleName &amp;&quot; &quot;&amp;DependentLicense2__r.Licensee__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Licensee 2</label>
    <type>Text</type>
</CustomField>