force-app/main/default/objects/Application__c/fields/DependentLicensee__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensee__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>IF( 
DependentLicense__r.Licensee__r.RecordType.DeveloperName = &apos;BusinessAccount&apos;,
DependentLicense__r.Licensee__r.Name, 
DependentLicense__r.Licensee__r.FirstName &amp; &quot; &quot;&amp;DependentLicense__r.Licensee__r.MiddleName &amp;&quot; &quot;&amp;DependentLicense__r.Licensee__r.LastName  &amp;&quot; &quot;&amp;DependentLicense__r.Licensee__r.Suffix 
)</formula>
    <label>Dependent Licensee</label>
    <type>Text</type>
</CustomField>