force-app/main/default/objects/Application__c/fields/DependentLicenseNote__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseNote__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>