force-app/main/default/objects/Application__c/fields/DependentLicenseNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseNumberFormula__c</fullName>
    <formula>DependentLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Number Formula</label>
    <type>Text</type>
</CustomField>