force-app/main/default/objects/Application__c/fields/DependentLicenseStartofRenewalPeriod__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseStartofRenewalPeriod__c</fullName>
    <description>PacPoint-IC103019- Created for PVL phase 1
Retrieves and formats the Dependent License&apos;s License Type Start of Renewal field to Month/Year</description>
    <formula>TEXT(MONTH( DependentLicense__r.LicenseType__r.StartofRenewalPeriod__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( DependentLicense__r.LicenseType__r.StartofRenewalPeriod__c ))</formula>
    <label>DependentLicense Start of Renewal Period</label>
    <type>Text</type>
</CustomField>