force-app/main/default/objects/Application__c/fields/DependentLicenseType__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseType__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>DependentLicense__r.LicenseType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Type</label>
    <type>Text</type>
</CustomField>