force-app/main/default/objects/Application__c/fields/DependentMailingCity__c.field-meta.xml
<CustomField>
    <fullName>DependentMailingCity__c</fullName>
    <description>PacPoint-KN102819-Created for PVL Sprint 2 Phase 1</description>
    <formula>IF(
NOT( ISBLANK( DependentApplication__c )),

DependentApplication__r.MailingCity__c ,

IF(
NOT( ISBLANK( DependentLicense__c )),

 DependentLicense__r.MailingCity__c  ,

&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Mailing City</label>
    <type>Text</type>
</CustomField>